Fixed logo pointing nowhere

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <div class="wrapper">
         <nav class="header-nav">
-          <a href="/" class="logo-home">alex grigore</a>
+          <a href="#header" class="logo-home">alex grigore</a>
           <ul class="top-links">
             <li><a href="#about">about</a></li>
             <li><a href="#projects">projects</a></li>
